--- a/UseCases/ProductCategories_GetChildCategories_OAuth2.html
+++ b/UseCases/ProductCategories_GetChildCategories_OAuth2.html
@@ -1,10 +1,12 @@
 <h1>Product Categories - Get Child Categories - oAuth 2.0</h1>
 <h2>Last tested: 09/24/2024 on TTID 0TT1Q000004Es40</h2>
-<h3>Changes made to environment collection variables (did not pass prior / assumes use of Capricorn sample products in <a href="https://github.com/tzarrsf/b2b-commerce-gtk-admin/">https://github.com/tzarrsf/b2b-commerce-gtk-admin/</a> (see data folder)</h3>
+<h3>Changes made to environment collection variables:</h3>
 <ul>
     <li>b2bWebStoreParentCategoryName: Machines</li>
     <li>b2bWebStoreExpectedChildCategoryNamesCommaDelimited: Coffee Machines,Espresso Machines</li>
 </ul>
+<h4>Reason:</h4>
+Did not pass prior to change. Stock variables assume use of Capricorn sample products in <a href="https://github.com/tzarrsf/b2b-commerce-gtk-admin/">https://github.com/tzarrsf/b2b-commerce-gtk-admin/</a> (see data folder) and "Machines" moved to top level with CSV import and was no longer a child of "Products."
 <h3>Request Chain</h3>
 <ol>
 <ol>
