Template rename for use case examples

--- a/UseCases/_TemplateArea_Function_OAuth2.html
+++ b/UseCases/_TemplateArea_Function_OAuth2.html
@@ -1,5 +1,5 @@
-<h1>Product Search Basic - oAuth 2.0</h1>
-Last tested: 09/24/2024 on TTID 0TT1Q000004Es40
+<h1>Area - Function - oAuth 2.0</h1>
+Last tested: N/A on TTID 0TT1Q000004Es40
 <ol>
     <li>ClearCollectionVariables</li>
     <li>LogInAsSystemAdministratorViaSoap</li>
